--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,37 +1,53 @@
-body {
-  margin: 0;
-  background: #0c1227;
-  font-family: sans-serif;
+.root {
+	font-family: sans-serif;
+	max-width: 800px;
+	margin: 0 auto;
 }
 
-.app {
-  text-align: center;
+.navbar {
+	display: flex;
+	justify-content: center;
+	margin: 30px 0;
 }
 
-.app code {
-  padding: 4px 8px;
-  background: #0b2f5b;
+.pager {
+	display: flex;
+	justify-content: center;
 }
 
-.app p {
-  margin: 0.8rem;
+.story {
+	margin: 30px 0;
 }
 
-.app-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 4vh;
-  color: white;
+.item {
+	margin: 30px 0;
 }
 
-.app-link {
-  color: white;
+.meta {
+	color: #484848;
 }
 
-.crank-logo {
-  max-height: 30vh;
-  pointer-events: none;
+
+.comment {
+	margin: 30px 0;
+}
+
+.replies {
+	position: relative;
+	margin-left: 30px;
+}
+
+.expand {
+	position: relative;
+	top: -1px;
+	margin: 0;
+	padding: 0;
+	font-size: 0.8em;
+	vertical-align: botttom;
+	background-color: transparent;
+	border: none;
+}
+
+.expand:active {
+	color: black;
 }
